fix alignment

--- a/_includes/main.css
+++ b/_includes/main.css
@@ -149,7 +149,7 @@ img {
     display: inline-block;
     width: 0.85em;
     height: 0.85em;
-    vertical-align: middle;
+    vertical-align: 0em;
     margin: 0 0.25em 0 0;
     border-radius: 2px;
     box-shadow: none
